--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@ html,body{
   background-color:#041633;
 }
 .hero-bg img{
-  width:100%;height:100%;object-fit:cover;object-position:center;
+  width:100%;
+  height:auto;
+  min-height:100vh;
+  object-fit:contain;
+  object-position:top center;
   background-color:#041633;
 }
 .hero-overlay{
@@ -159,7 +163,7 @@ footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
 const RAW="https://raw.githubusercontent.com/suchanek76/website/main/images";
 const imgKoruna=i=>`${RAW}/Koruna/Koruna${String(i).padStart(2,'0')}.jpg`;
 const imgAlpy=i=>`${RAW}/4000/ctyrtisicovka${String(i).padStart(2,'0')}.jpg`;
-const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`; // ✅ opraveno
+const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 
 
 /* ---------- Data: Koruna (z mé tabulky) ---------- */
@@ -298,7 +302,7 @@ const alpyData = [
 
 /* ---------- Data: Nepál (jen obrázky) ---------- */
 const nepalData = Array.from({length:40}, (_,i)=>({
-  idx:i+1,
+  idx:i,
   title:`Nepál ${i+1}`,
   img:imgNepal(i+1)
 }));
@@ -322,14 +326,18 @@ function openModal(html,isFullscreen=false){
   document.body.style.overflow='hidden';
 }
 
-/* Koruna + Alpy detail */
+/* Koruna + Alpy */
 function showDetail(it,imgSrc){
   openModal(`
     <button class="modal-close" onclick="closeModal()">✕</button>
     <div class="meta"><strong>${it.p}. ${it.hora}</strong> ${it.v?`, ${it.v} m`:''}</div>
     <div class="meta">${it.z||''}</div>
-    <div class="meta">${it.d||''}</div>
+    <div class="meta">${it.d?`${it.d}${it.cas?`, ${it.cas} hod`:''}`:''}</div>
+    <div class="meta">Pohoří: ${it.pohori||''}</div>
+    <div class="meta">Team: ${it.team||''}</div>
+    <div class="meta">Obtížnost: ${it.obt||''}</div>
     <img class="main" src="${imgSrc}">
+    <p>${it.povidani||''}</p>
   `);
 }
 
