--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   --accent: #ffffff;
   --max-width: 1200px;
 }
-*{box-sizing:border-box;}
+*{box-sizing:border-box;margin:0;padding:0;}
 html,body{
-  margin:0;padding:0;
   font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
   color:var(--accent);
   background:var(--dark-blue);
@@ -21,10 +20,20 @@ html,body{
 }
 
 /* Hero */
-.hero{position:relative;width:100%;height:100vh;background:var(--dark-blue);overflow:hidden;}
+.hero{
+  position:relative;
+  width:100%;
+  height:100vh;
+  background:var(--dark-blue);
+  overflow:hidden;
+}
 .hero-bg{
-  position:absolute;inset:0;z-index:0;
-  display:flex;justify-content:center;align-items:flex-start;
+  position:absolute;
+  inset:0;
+  z-index:0;
+  display:flex;
+  justify-content:center;
+  align-items:flex-start;
   background-color:#041633;
 }
 .hero-bg img{
@@ -36,16 +45,23 @@ html,body{
   background-color:#041633;
 }
 .hero-overlay{
-  position:relative;z-index:2;height:100%;
-  display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
-  text-align:center;padding-top:100px;
+  position:absolute;
+  inset:0;
+  z-index:2;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
-.hero h1{font-size:clamp(30px,6vw,56px);margin:0;text-shadow:0 3px 10px rgba(0,0,0,0.5);}
-.nav{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap;justify-content:center;}
+.nav{
+  display:flex;
+  gap:12px;
+  flex-wrap:wrap;
+  justify-content:center;
+}
 .btn{
   background:rgba(255,255,255,0.12);
   border:1px solid rgba(255,255,255,0.2);
-  padding:10px 18px;
+  padding:12px 20px;
   color:white;
   border-radius:8px;
   font-weight:600;
@@ -56,7 +72,12 @@ html,body{
 .btn.active{background:#fff;color:var(--dark-blue);}
 
 /* Galerie */
-main{position:relative;margin-top:-420px;z-index:3;background:none;padding-top:100px;padding-bottom:80px;}
+main{
+  position:relative;
+  z-index:3;
+  background:none;
+  padding:60px 0 80px;
+}
 .container{width:95%;max-width:var(--max-width);margin:0 auto;}
 .gallery{display:grid;gap:16px;}
 .grid-3{grid-template-columns:repeat(3,1fr);}
@@ -128,7 +149,6 @@ footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
     <img src="https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg" alt="background">
   </div>
   <div class="hero-overlay">
-    <h1>Vzít batoh na záda a jít ...</h1>
     <div class="nav">
       <button class="btn active" data-route="koruna">Koruna Evropy</button>
       <button class="btn" data-route="alpy">Alpské čtyřtisícovky</button>
